[package]
name = "textsweeper"
version = "0.1.1"
edition = "2021"
authors = ["Navaneeth Sajiv"]
license = "MIT"
description = "A minesweeper clone made for the command line!"
repository = "https://github.com/codeaye/textsweeper"
homepage = "https://github.com/codeaye/textsweeper"


[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"
